添加了获取前台程序的判断，确保可使用android 4.4的版本

--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
+
+        <service android:name=".service.MainService"></service>
     </application>
 
 </manifest>
