--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
@@ -65,6 +64,9 @@
         </activity>
         <activity
             android:name=".activity.AppSelectActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activity.LockActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".activity.AppMenuActivity"
