导航可能出现的bug修复 dock标签控制

--- a/WowCarLauncher/mobile/build.gradle
+++ b/WowCarLauncher/mobile/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 24
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.wow.carlauncher"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -47,8 +47,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:appcompat-v7:24.+'
+    compile 'com.android.support:support-v4:24.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'org.xutils:xutils:3.0'
