--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -41,21 +41,14 @@
             android:value="d5e7bb2e7adc2e970d5ef05c379eb1bb" />
 
         <activity
-            android:name=".activity.MainActivity"
-            android:screenOrientation="landscape"
-            android:stateNotNeeded="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".activity.LauncherActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale|screenLayout|mcc|mnc"
             android:launchMode="singleInstance"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.HOME" />
             </intent-filter>
