--- a/WowCarLauncher/mobile/build.gradle
+++ b/WowCarLauncher/mobile/build.gradle
@@ -47,13 +47,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    compile project(':acommon')
+
     compile 'com.android.support:appcompat-v7:24.+'
     compile 'com.android.support:support-v4:24.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'org.xutils:xutils:3.0'
-    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.zhy:percent-support-extends:+'
-    compile 'com.google.code.gson:gson:2.2.4'
 
 }
