--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -78,23 +78,18 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="com.nwd.ACTION_AFTER_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+
+                <action android:name="android.intent.action.SCREEN_ON" />
+
+                <action android:name="com.nwd.ACTION_AFTER_BOOT_COMPLETED" />
+                <action android:name="com.nwd.action.ACTION_GOHOME" />
             </intent-filter>
         </receiver>
 
-        <receiver
-            android:name=".receiver.HomeReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.SCREEN_ON" />
-                <action android:name="ACTION_INIT_FACTORY_SETTING_SUCCESS" />
-                <action android:name="com.nwd.action.ACTION_KEY_VALUE" />
-                <action android:name="com.nwd.action.ACTION_GOHOME" />
-                <action android:name="com.nwd.ACTION_AFTER_BOOT_COMPLETED" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
         <receiver
             android:name=".receiver.AppInstallReceiver"
             android:label="@string/app_name">
