--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="d5e7bb2e7adc2e970d5ef05c379eb1bb" />
+        <service android:name="com.amap.api.location.APSService"/>
 
         <activity
             android:name=".activity.LauncherActivity"
