--- a/WowCarLauncher/acommon/build.gradle
+++ b/WowCarLauncher/acommon/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'org.xutils:xutils:3.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile group: 'com.google.guava', name: 'guava', version: '24.1-android'
 }
