--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -48,7 +48,9 @@
 
         <activity
             android:name=".activity.launcher.LauncherActivity"
+            android:clearTaskOnLaunch="true"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|screenLayout|mcc|mnc"
+            android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:screenOrientation="landscape">
             <intent-filter>
