no commit message

--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -79,6 +79,15 @@
         <activity
             android:name=".activity.AboutActivity"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".activity.CarInfoActivity"
+            android:screenOrientation="landscape" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
 
         <receiver
             android:name=".receiver.BootReceiver"
