no commit message

--- a/WowCarLauncher/mobile/build.gradle
+++ b/WowCarLauncher/mobile/build.gradle
@@ -56,4 +56,5 @@ dependencies {
 
     compile 'com.zhy:percent-support-extends:+'
     compile 'com.inuker.bluetooth:library:+'
+    compile 'com.czp.arcProgressBar:ArcProgressBar:1.0.1'
 }
