--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
             android:name=".activity.AboutActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".activity.DrivingActivity"
+            android:name=".activity.driving.DrivingActivity"
             android:screenOrientation="landscape" />
 
         <activity
