no commit message

--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -78,17 +78,12 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".view.activity.driving.DrivingActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="landscape" />
 
         <activity
             android:name=".view.activity.CarInfoActivity"
-            android:screenOrientation="landscape">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
+            android:screenOrientation="landscape"/>
 
         <receiver
             android:name=".receiver.BootReceiver"
