no commit message

--- a/WowCarLauncher/mobile/src/main/AndroidManifest.xml
+++ b/WowCarLauncher/mobile/src/main/AndroidManifest.xml
@@ -78,7 +78,7 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".view.activity.driving.DrivingActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
 
         <activity
