--- a/acommon/build.gradle
+++ b/acommon/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 24
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -19,11 +19,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.+'
-    compile 'com.android.support:design:24.+'
-
-    compile 'org.xutils:xutils:3.0'
-    compile 'org.greenrobot:eventbus:3+'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile group: 'com.google.guava', name: 'guava', version: '24.1-android'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'org.xutils:xutils:3.5.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.guava:guava:27.0.1-android'
 }
