调整首页的界面

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -46,6 +46,7 @@ android {
 dependencies {
     api project(':acommon')
 
+    implementation 'io.github.meetsl:SCardView:1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'org.xutils:xutils:3.5.0'
