--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
 
@@ -44,7 +44,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppThemeWhile"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -88,7 +89,7 @@
 
         <activity
             android:name=".view.activity.CarInfoActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
 
         <receiver
             android:name=".receiver.BootReceiver"
