主题机制修改

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -41,12 +41,15 @@ android {
             dirs 'libs'   // aar目录
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     api project(':acommon')
     api project(':musicapi')
-
     implementation 'io.github.meetsl:SCardView:1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.xutils:xutils:3.5.0'
