--- a/musicapi/build.gradle
+++ b/musicapi/build.gradle
@@ -18,6 +18,10 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -26,6 +30,5 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.2'
     implementation 'org.xutils:xutils:3.5.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-
     api project(':acommon')
 }
