图标问题修复

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -48,6 +48,8 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'io.github.meetsl:SCardView:1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.xutils:xutils:3.5.0'
