--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -127,6 +127,16 @@
         </receiver>
 
         <service android:name=".service.MainService" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.satsoftec.risense.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
