--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -130,7 +130,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.satsoftec.risense.fileprovider"
+            android:authorities="com.wow.carlauncher.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
