--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -97,6 +97,7 @@
         <activity
             android:name=".view.activity.CarInfoActivity"
             android:screenOrientation="landscape" />
+        <activity android:name=".view.activity.BluetoothMusicActivity" />
 
         <receiver
             android:name=".receiver.BootReceiver"
